<resources>
    <string name="app_name">WanAndroid</string>


    <string name="home">首页</string>
    <string name="weChat">公众号</string>
    <string name="type">分类</string>
    <string name="me">我的</string>

    <string name="home_item_new">新</string>
    <string name="home_item_top">置顶</string>

    <string name="search_hint">多条搜索内容用空格隔开</string>
    <string name="search">搜索</string>

    <string name="hotKey_hint">大家都在搜</string>
    <string name="clear">清空</string>
    <string name="search_history">搜索历史</string>
    <string name="collect">收藏</string>

    <string name="collect_article">我喜欢的文章</string>
    <string name="collect_website">我喜欢的网址</string>
    <string name="commonly_website">常用网站</string>
    <string name="navigation">导航</string>
    <string name="todo">TODO</string>
    <!-- 修改为退出 -->
    <string name="about_me">退出登录</string>
    <string name="login_register">登录/注册</string>

    <string name="todo_title_hint">请输入标题（必填）</string>
    <string name="todo_content_hint">请输入内容（选填）</string>

    <string name="finish_time">完成时间</string>

    <string name="pending">待完成</string>
    <string name="finish">已完成</string>

    <!-- 44dp before -->
    <!-- ?android:attr/actionBarSize -->
    <dimen name="action_bar_size">50dp</dimen>

</resources>
