<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/todo_add_actionBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <FrameLayout
            android:id="@+id/todo_add_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_back" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/todo_add_ok"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_ok" />
        </FrameLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="标题"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/todo_add_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_round_corner_gray"
        android:gravity="start|top"
        android:hint="@string/todo_title_hint"
        android:padding="5dp"
        android:textCursorDrawable="@drawable/edit_cursor_color_green"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="内容"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/todo_add_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_round_corner_gray"
        android:gravity="start|top"
        android:hint="@string/todo_content_hint"
        android:padding="5dp"
        android:textCursorDrawable="@drawable/edit_cursor_color_green"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_round_corner_gray"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/finish_time"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/todo_add_time"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="30dp"
            android:background="@drawable/border_corner_gray"
            android:gravity="center"
            android:textSize="15sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/todo_add_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_round_corner_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:layout_marginStart="5dp"
            android:id="@+id/todo_add_radio_pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/pending" />

        <RadioButton
            android:id="@+id/todo_add_radio_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/finish" />

    </RadioGroup>


</LinearLayout>