<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.main.view.MainActivity">

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/common_page_tab_gray"
        android:baselineAligned="true"
        android:paddingTop="1dp"
        android:paddingBottom="1dp">

        <LinearLayout
            android:id="@+id/main_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_home_img"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@mipmap/ic_home_selected" />

            <TextView
                android:id="@+id/main_home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/common_page_selected"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_weChat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_weChat_img"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@mipmap/ic_wechat" />

            <TextView
                android:id="@+id/main_weChat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weChat"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_type_img"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@mipmap/ic_type" />

            <TextView
                android:id="@+id/main_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_me_img"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@mipmap/ic_me" />

            <TextView
                android:id="@+id/main_me_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>